DEADLINE!
## 수요일까지 Train 시키고 Test 돌리기
    ## 정확도 출력, Train set 모두 학습 후 DB3로 테스트 진행.

Apr. 25. 2022 (B. InSung)
- Monday Session Start!
- BBRBM.py : w_t + self.b 에서 dimension 불일치 오류 발생
- BBRBM p_v_given_h 함수 오류 발생
    - RuntimeError: mat1 and mat2 shapes cannot be multiplied (80x180 and 1x180)
    - w_t + self.b 의 크기를 변경 예정. 1x180 -> 180x1
- RuntimeError: shape '[14400]' is invalid for input of size 1152000

Apr. 24. 2022 (B. InSung)
- stats_pos, stats_neg 문제 해결
    - 각각의 matmul을 위한 사이즈와 src (scatter 사이즈로 맞춰줌.) 이로 인해 문제해결
- BBRBM p_h_given_v 함수 내에서 오류 발생
    - sigmoid 함수에 parameter로 넣으면서 맞지 않은 데이터 형식으로 오류남.
        - RuntimeError: shape '[14400]' is invalid for input of size 80
    - v_i = v.clone().view(180 * 80)를 하면 180의 input은 존재, 허나 14400개를 채울게 없음
    - 이로 인해 에러 발생. 고쳐야하는데... 멘탐 좀 나감.

Apr. 22. 2022 (B. InSung)
- Torch 에서 같은 문제로 충돌하게 됨. 모종의 이유로 Tensorflow로 다시 시작해봄...
    - 사실상 처음부터 다시한 느낌이다만, 그래도 Pre-processing을 객체로 끌어와서 다행
- Tensorflow 내에서 어떻게 입력을 해줘야할지에서 논의중
    - 강아지 궁뎅이 그리워요

Apr. 21. 2022 (B. InSung)
- Torch.scatter 함수를 통해서 2D Tensor를 1D Tensor로 변환
- 막상 생각해보닌까 진짜 문제는 따로 있었음.
    - 80과 180, 1D로 되어 있는걸 Matmul 이 가능한가? 안되지 않나?

Apr. 20. 2022 (B. InSung)
- Tada... I'm back.
- 기존 에러에서의 문제점 확인
    - BBRBM에서 sample_h_given_v 함수에서 (h_prob > r) 를 상수 형태로 리턴
        - torchdot 으로 환산되어 반환.
        - src means "TORCH.TENSOR.SCATTER"
        - const 형태에서 non-const 형태로 변경 성공 (실패)
            - torch.gt() 함수는 큰 의미는 없음. 3. 와 같이 뒤에 .은 소수점을 의미.
    - 이로 인해서 변형이 불가. h_prob 와 맞지 않는 형태
    - 허나 이 또한 아직까지 확실하지 않음. 지속적인 수정을 진행할 예정.
        - 참고하기 https://pytorch.org/docs/stable/generated/torch.Tensor.scatter_.html#torch.Tensor.scatter_

Apr. 13. 2022 (B. InSung)
- Matrix Multiple compute 오류 발생.
    - 가우시안 분포를 해야하는데 Bernoulli 분포를 활용해버림. 뒤질거 같아요. 살려줘

- 뭔가 될거 같은데 자꾸 뭐가 안돼요.
    - ㅠㅜㅠㅜㅠㅜㅠㅜㅠㅜㅜㅠㅜㅠㅜㅠㅜㅠㅜㅠㅜㅠㅠㅜㅠㅜㅠㅜㅜㅠㅜ흐아ㅡㅔ어레ㅓ우ㅠㅠㅜㅜㅠㅜㅠ

Apr. 12. 2022 (B. InSung)
- 모델에 데이터 입력에서 아직 문제 발생
    - 하다하다 빡쳐서 그냥 PyTorch로 변경.
    - Matrix ISSUE!

Apr. 11. 2022 (B. InSung)