@@ -101,8 +101,14 @@ class RBMBase:
         # print((w_grad - lam) * torch.tensor(self.w))
 
         self.w = (self.w.clone()).view(self.vis_num * self.hid_num)
-        testing_tensor = torch.tensor(w_grad - lam).view(self.vis_num * self.hid_num)
-        print("Weight size : ", self.w.size(), " w - lam size : ", testing_tensor.size())
+
+        # ISSUE PART
+        if (testing_tensor.size() == 14400):
+            testing_tensor = torch.tensor(w_grad - lam)
+            print("\t\t[LOOPED]Weight - lamba Tensor size : ", testing_tensor.size())
+        else:    
+            testing_tensor = torch.tensor(w_grad - lam).view(self.vis_num * self.hid_num)
+            print("\t\t[FIRSTT]Weight - lamba Tensor size : ", testing_tensor.size())
         
         self.w_v = (self.w_v.clone()).view(self.vis_num * self.hid_num)
 
